<resources>
    <string name="app_name">Deteksi Buah</string>
    <string name="fruit_basket">Fruit Basket</string>
    <string name="get_your_fruit_in_the_image_with_gallery_or_camera">Dapatkan buahmu di dalam sebuah gambar dengan</string>
    <string name="your_fruit_image">Your fruit image</string>
    <string name="gallery">Galeri</string>
    <string name="camera">Kamera</string>
    <string name="lorem_title">Lorem Ipsum</string>
    <string name="lorem_description">Lorem Ipsum</string>
    <string name="lorem_fruit">Mandarin Orange</string>
    <string name="lorem_fruit_sci">Citrus reticulata</string>
    <string name="lorem_fruit_description">The mandarin orange, also known as the mandarin or mandarine, is a small citrus tree fruit. Treated as a distinct species of orange, it is usually eaten plain or in fruit salads. Tangerines are a group of orange-coloured citrus fruit consisting of hybrids of mandarin orange with some pomelo contribution.</string>
    <string name="description">Deskripsi</string>
    <string name="other_detected_fruit">Buah yang terdeteksi atau mirip lainnya</string>
    <string name="fruit_pictures">Gambar</string>
    <string name="fruit_pictures_with_name">Gambar %s</string>
    <string name="fruit_not_found">Buah tidak ditemukan</string>
</resources>