<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_user_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/your_fruit_image"
            android:maxHeight="400dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_user_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/lorem_fruit" />

                <TextView
                    android:id="@+id/tv_title_sci"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@id/tv_title"
                    app:layout_constraintStart_toStartOf="@id/tv_title"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:text="@string/lorem_fruit_sci" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@id/tv_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@id/cv_title" />

        <TextView
            android:id="@+id/tv_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_title" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@id/tv_description_label"
            tools:text="@string/lorem_fruit_description" />

        <TextView
            android:id="@+id/tv_other_fruit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/other_detected_fruit"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_other_fruit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_other_fruit"
            tools:listitem="@layout/item_fruit_name" />

        <TextView
            android:id="@+id/tv_fruit_pictures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/fruit_pictures"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@id/rv_other_fruit" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fruit_pictures"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@id/tv_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_description_label"
            app:layout_constraintTop_toBottomOf="@id/tv_fruit_pictures" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
